[gd_scene load_steps=4 format=3 uid="uid://b5asogdb08qmk"]

[ext_resource type="Script" path="res://spot_the_difference.gd" id="1_6whev"]
[ext_resource type="Texture2D" uid="uid://cbp52351l4464" path="res://WhiteBG.png" id="2_fdske"]
[ext_resource type="Texture2D" uid="uid://70unkr46ygy4" path="res://GreenBG.png" id="3_4b40b"]

[node name="SpotTheDifference" type="Node2D"]
script = ExtResource("1_6whev")

[node name="Button1A" type="Button" parent="."]
offset_left = 200.0
offset_top = 160.0
offset_right = 240.0
offset_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button1A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button2A" type="Button" parent="."]
offset_left = 200.0
offset_top = 208.0
offset_right = 240.0
offset_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button2A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button3A" type="Button" parent="."]
offset_left = 200.0
offset_top = 256.0
offset_right = 240.0
offset_bottom = 296.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button3A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button4A" type="Button" parent="."]
offset_left = 200.0
offset_top = 304.0
offset_right = 240.0
offset_bottom = 344.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button4A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button5A" type="Button" parent="."]
offset_left = 248.0
offset_top = 160.0
offset_right = 288.0
offset_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button5A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button6A" type="Button" parent="."]
offset_left = 248.0
offset_top = 208.0
offset_right = 288.0
offset_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button6A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button7A" type="Button" parent="."]
offset_left = 248.0
offset_top = 256.0
offset_right = 288.0
offset_bottom = 296.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button7A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button8A" type="Button" parent="."]
offset_left = 248.0
offset_top = 304.0
offset_right = 288.0
offset_bottom = 344.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button8A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button9A" type="Button" parent="."]
offset_left = 296.0
offset_top = 160.0
offset_right = 336.0
offset_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button9A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button10A" type="Button" parent="."]
offset_left = 296.0
offset_top = 208.0
offset_right = 336.0
offset_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button10A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button11A" type="Button" parent="."]
offset_left = 296.0
offset_top = 256.0
offset_right = 336.0
offset_bottom = 296.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button11A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button12A" type="Button" parent="."]
offset_left = 296.0
offset_top = 304.0
offset_right = 336.0
offset_bottom = 344.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button12A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button13A" type="Button" parent="."]
offset_left = 344.0
offset_top = 160.0
offset_right = 384.0
offset_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button13A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button14A" type="Button" parent="."]
offset_left = 344.0
offset_top = 208.0
offset_right = 384.0
offset_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button14A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button15A" type="Button" parent="."]
offset_left = 344.0
offset_top = 256.0
offset_right = 384.0
offset_bottom = 296.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button15A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button16A" type="Button" parent="."]
offset_left = 344.0
offset_top = 304.0
offset_right = 384.0
offset_bottom = 344.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button16A"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 39.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button1B" type="Button" parent="."]
offset_left = 432.0
offset_top = 160.0
offset_right = 472.0
offset_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button1B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button2B" type="Button" parent="."]
offset_left = 432.0
offset_top = 208.0
offset_right = 472.0
offset_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button2B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button3B" type="Button" parent="."]
offset_left = 432.0
offset_top = 256.0
offset_right = 472.0
offset_bottom = 296.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button3B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button4B" type="Button" parent="."]
offset_left = 432.0
offset_top = 304.0
offset_right = 472.0
offset_bottom = 344.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button4B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button5B" type="Button" parent="."]
offset_left = 480.0
offset_top = 160.0
offset_right = 520.0
offset_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button5B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button6B" type="Button" parent="."]
offset_left = 480.0
offset_top = 208.0
offset_right = 520.0
offset_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button6B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button7B" type="Button" parent="."]
offset_left = 480.0
offset_top = 256.0
offset_right = 520.0
offset_bottom = 296.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button7B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button8B" type="Button" parent="."]
offset_left = 480.0
offset_top = 304.0
offset_right = 520.0
offset_bottom = 344.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button8B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button9B" type="Button" parent="."]
offset_left = 528.0
offset_top = 160.0
offset_right = 568.0
offset_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button9B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button10B" type="Button" parent="."]
offset_left = 528.0
offset_top = 208.0
offset_right = 568.0
offset_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button10B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button11B" type="Button" parent="."]
offset_left = 528.0
offset_top = 256.0
offset_right = 568.0
offset_bottom = 296.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button11B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button12B" type="Button" parent="."]
offset_left = 528.0
offset_top = 304.0
offset_right = 568.0
offset_bottom = 344.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button12B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button13B" type="Button" parent="."]
offset_left = 576.0
offset_top = 160.0
offset_right = 616.0
offset_bottom = 200.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button13B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button14B" type="Button" parent="."]
offset_left = 576.0
offset_top = 208.0
offset_right = 616.0
offset_bottom = 248.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button14B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button15B" type="Button" parent="."]
offset_left = 576.0
offset_top = 256.0
offset_right = 616.0
offset_bottom = 296.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button15B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Button16B" type="Button" parent="."]
offset_left = 576.0
offset_top = 304.0
offset_right = 616.0
offset_bottom = 344.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button16B"]
z_index = -5
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 19
text = "1A"

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(408, 224)
scale = Vector2(0.25, 0.237037)
texture = ExtResource("2_fdske")

[node name="Win" type="Sprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(408, 224)
scale = Vector2(0.25, 0.237037)
texture = ExtResource("3_4b40b")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 264.0
offset_top = 104.0
offset_right = 655.0
offset_bottom = 187.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
text = "Spot the Difference"
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]

[node name="Cover" type="Sprite2D" parent="."]
visible = false
position = Vector2(586, 324.5)
scale = Vector2(0.666667, 0.600926)
texture = ExtResource("2_fdske")

[connection signal="pressed" from="Button1A" to="." method="_on_button_1a_pressed"]
[connection signal="pressed" from="Button2A" to="." method="_on_button_2a_pressed"]
[connection signal="pressed" from="Button3A" to="." method="_on_button_3a_pressed"]
[connection signal="pressed" from="Button4A" to="." method="_on_button_4a_pressed"]
[connection signal="pressed" from="Button5A" to="." method="_on_button_5a_pressed"]
[connection signal="pressed" from="Button6A" to="." method="_on_button_6a_pressed"]
[connection signal="pressed" from="Button7A" to="." method="_on_button_7a_pressed"]
[connection signal="pressed" from="Button8A" to="." method="_on_button_8a_pressed"]
[connection signal="pressed" from="Button9A" to="." method="_on_button_9a_pressed"]
[connection signal="pressed" from="Button10A" to="." method="_on_button_10a_pressed"]
[connection signal="pressed" from="Button11A" to="." method="_on_button_11a_pressed"]
[connection signal="pressed" from="Button12A" to="." method="_on_button_12a_pressed"]
[connection signal="pressed" from="Button13A" to="." method="_on_button_13a_pressed"]
[connection signal="pressed" from="Button14A" to="." method="_on_button_14a_pressed"]
[connection signal="pressed" from="Button15A" to="." method="_on_button_15a_pressed"]
[connection signal="pressed" from="Button16A" to="." method="_on_button_16a_pressed"]
[connection signal="pressed" from="Button1B" to="." method="_on_button_1b_pressed"]
[connection signal="pressed" from="Button2B" to="." method="_on_button_2b_pressed"]
[connection signal="pressed" from="Button3B" to="." method="_on_button_3b_pressed"]
[connection signal="pressed" from="Button4B" to="." method="_on_button_4b_pressed"]
[connection signal="pressed" from="Button5B" to="." method="_on_button_5b_pressed"]
[connection signal="pressed" from="Button6B" to="." method="_on_button_6b_pressed"]
[connection signal="pressed" from="Button7B" to="." method="_on_button_7b_pressed"]
[connection signal="pressed" from="Button8B" to="." method="_on_button_8b_pressed"]
[connection signal="pressed" from="Button9B" to="." method="_on_button_9b_pressed"]
[connection signal="pressed" from="Button10B" to="." method="_on_button_10b_pressed"]
[connection signal="pressed" from="Button11B" to="." method="_on_button_11b_pressed"]
[connection signal="pressed" from="Button12B" to="." method="_on_button_12b_pressed"]
[connection signal="pressed" from="Button13B" to="." method="_on_button_13b_pressed"]
[connection signal="pressed" from="Button14B" to="." method="_on_button_14b_pressed"]
[connection signal="pressed" from="Button15B" to="." method="_on_button_15b_pressed"]
[connection signal="pressed" from="Button16B" to="." method="_on_button_16b_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
